proyecto-3/manifests/consumer-kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer-kafka
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer-kafka
  template:
    metadata:
      labels:
        app: consumer-kafka
    spec:
      containers:
      - name: consumer-kafka
        image: misti-ophthalmological-ai.ngrok-free.dev/consumer-kafka:v1
