proyecto-3/manifests/api-rust.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-rust-deploy
  labels:
    app: api-rust
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-rust
  template:
    metadata:
      labels:
        app: api-rust
    spec:
      containers:
      - name: api-rust
        image: misti-ophthalmological-ai.ngrok-free.dev/api-rust:v2
        imagePullPolicy: Always 
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api-rust-service
  labels:
    app: api-rust 
spec:
  type: NodePort
  selector:
    app: api-rust
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
