proyecto-3/manifests/deploy-kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-kafka-writer
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-kafka-writer
  template:
    metadata:
      labels:
        app: grpc-kafka-writer
    spec:
      containers:
      - name: grpc-kafka-writer
        image: misti-ophthalmological-ai.ngrok-free.dev/grpc-kafka-writer:v1
        ports:
        - containerPort: 50052
---
apiVersion: v1
kind: Service
metadata:
  name: server-go-kafka
  namespace: default
spec:
  selector:
    app: grpc-kafka-writer
  ports:
  - port: 50052
    targetPort: 50052
