proyecto-3/manifests/valkey.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valkey
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: valkey
  template:
    metadata:
      labels:
        app: valkey
    spec:
      containers:
      - name: valkey
        image: ghcr.io/valkey-io/valkey:7.2
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: valkey-service
  namespace: default
spec:
  selector:
    app: valkey
  ports:
  - port: 6379
    targetPort: 6379
    name: redis
  type: ClusterIP
