proyecto-3/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-proyecto
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-rust-service
            port:
              number: 80
      - path: /weathertweet
        pathType: Prefix
        backend:
          service:
            name: api-rust-service
            port:
              number: 80
